--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
         :root {
             --achtergrond-primair: hsl(0, 0%, 96%);
             --site-paars: hsla(304, 36%, 42%, 1);
+            --interactief: rgb(255, 206, 99);
             --header-bg: rgba(107, 59, 97, 0.3);
             --header-shadow: rgba(0, 0%, 0.1);
             --font-primair: Arial, Verdana;
@@ -49,7 +50,7 @@
             justify-content: space-between;
             align-items: center;
             background-color: rgba(255, 255, 255, 0.9);
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 7px rgba(0, 0, 0, 0.5);
         }
 
         .dubbeloproute-titel {
@@ -95,7 +96,7 @@
         .content-slider {
             position: relative;
             z-index: 2;
-            background: white;
+            background: var(--site-paars);
             padding: 120px 0 60px;
             overflow: hidden;
         }
@@ -190,7 +191,7 @@
         }
 
         .slider-dot.active {
-            background: var(--site-paars);
+            background: var(--interactief);
         }
 
         .slider-arrow {
