--- a/css/styles.css
+++ b/css/styles.css
@@ -124,8 +124,8 @@
             transition: all 0.4s ease;
             position: relative;
             background: rgba(255, 255, 255, 0.25);
-            backdrop-filter: blur(10px);
-            -webkit-backdrop-filter: blur(10px);
+            backdrop-filter: blur(10px) saturate(15px);
+            -webkit-backdrop-filter: blur(10px) saturate(15px);
             border: 1px solid rgba(255, 255, 255, 0.18);
         }
 
@@ -156,6 +156,7 @@
             border-radius: 5px;
             font-size: 0.8rem;
             font-weight: bold;
+            box-shadow: 1px 5px 2px rgba(0, 0, 0, 0.35) inset;
         }
 
         .card-content {
@@ -214,7 +215,7 @@
         }
 
         .slider-arrow:hover {
-            background: var(--site-paars);
+            background: var(--interactief);
             color: white;
         }
 
