--- a/ed-vite/backup/cssBackup.css
+++ b/ed-vite/backup/cssBackup.css
@@ -1,5 +1,3 @@
-        @import "tailwindcss";
-        
         /* Jullie bestaande variabelen – blijven staan */
         :root {
             --achtergrond-primair: hsl(0, 0%, 96%);
@@ -13,9 +11,7 @@
             --header-text: hsla(0, 0%, 11%, 1);
         }
 
-        *,
-        *::before, 
-        *::after {
+        *, *::before, *::after {
             box-sizing: border-box;
         }
 
