--- a/ed-vite/src/assets/css/reviews.css
+++ b/ed-vite/src/assets/css/reviews.css
@@ -41,7 +41,7 @@
 }
 
 /* Image Carousel Section */
-.image-carousel-section {
+.The-Carousel_Game {
   max-width: 700px;
   margin: 0 auto 3rem;
   padding: 0 2rem;
